--- a/client/parent-data.html
+++ b/client/parent-data.html
@@ -1,6 +1,6 @@
 <body>
   <h1>Click on one of the player names and watch the console.</h1>
-  <h2>Template included by block template</h2>
+  <h2>Template included by custom block helper</h2>
 
   <ol>
   {{#myEach players}}
